Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,8 +20,7 @@ second-job:
   stage: run
   script:
     - cd Aula_01
-    - npm run start
-    - node test.js
+    - npm test
   artifacts:
     paths:
       - node_modules/
